[package]
  name = "razberry"
  version = "0.0.2"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "An HTTP client library for the Razberry Z-Wave Hub"
  keywords = [ "Razberry", "Z-Wave", "Raspberry", "home", "automation" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/razberry.rs"

[lib]
  name = "razberry"
  path = "src/lib.rs"

[dependencies]
  hyper = "0.7.*"
  log = "0.3.*"
  rustc-serialize = "0.3.*"
  url = "0.5.*"

