[package]
  name = "razberry"
  version = "0.2.1"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "An HTTP client library for the Razberry Z-Wave Hub"
  keywords = [ "Razberry", "Z-Wave", "Raspberry", "home", "automation" ]
  categories = [ "api-bindings" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/razberry.rs"

[lib]
  name = "razberry"
  path = "src/lib.rs"

[dependencies]
  hyper = "0.10.*"
  log = "0.3.*"
  rustc-serialize = "0.3.*"
  url = "1.4.*"

